# verified-geometry-game

./: .gitignore  README.md  dune-project
.github/workflows/: deploy.yml
src/: Client.ml  dune  index.html
theories/: Affine.v  ClientState.v  Deck.v  Display.v  Eqb.v  Extract.v  GameState.v  Geometry.v  Referee.v  dune
